Fix for Thin button not working on BZ98R and BZCC gamelist pages. Fix some overruns on mobile with some style changes and image class fixes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -507,6 +507,7 @@ $code-color:     #0e0;
     .sidebar3-content {
         flex: 1;
         overflow: auto;
+        word-break: break-word;
     }
     .sidebar-hidden .header-bar-menu-pad2 {
         padding-left: 42px;
